--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,17 +1,55 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
-    />
-  </head>
+<!DOCTYPE html>
+<!-- HTML for static distribution bundle build -->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+  <meta
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+  />
+  <title>Swagger Editor</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Roboto,sans-serif;
+      font-size: 9px;
+      line-height: 1.42857143;
+      color: #444;
+      margin: 0px;
+    }
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    #swagger-editor {
+      font-size: 1.3em;
+    }
+
+    .container {
+      height: 100%;
+      max-width: 880px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    #editor-wrapper {
+      height: 100%;
+      border:1em solid #000;
+      border:none;
+    }
+
+    .Pane2 {
+      overflow-y: scroll;
+    }
+
+  </style>
+</head>
+
+<body>
+<div id="swagger-editor"></div>
+
+<body>
+<div id="root"></div>
+<script type="module" src="/src/index.ts"></script>
+</body>
 </html>
