Package and use the swagger-editor-bundle.js Copied from node_modules/swagger-editor-dist
Importing the bundles resulted in vite doing funny things during the build and the built app no longer being able to run them.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -46,6 +46,8 @@
 </head>
 
 <body>
+<script src="./swagger-editor-bundle.js"> </script>
+<script src="./swagger-editor-standalone-preset.js"> </script>
 <div id="swagger-editor"></div>
 
 <body>
